# ai-infinite-canvas

./: .gitignore  .markdownlint.json  1.技术开发方案执行标准.md
infinite-canvas/agent/: .env.example  .gitignore  _check_blend_nodes.py  _check_gen.txt  _check_ipadapter_nodes.py  _dump_ltx.py  _dump_ltx.txt  _dump_more.py  _dump_more.txt  _dump_video_nodes.py  _dump_video_out.py  _dump_video_out.txt  _e2e_video.py  _find_t2v.py  _find_t2v.txt  _gen_wf.txt  _models.txt  _upload_i2v.txt  _video_nodes_dump.txt  agent_api_test.py  agent_cli.py  audio_blueprints.py  cli.py  comfy_client.py  consistency_manager.py  deepseek.py  diag.py  embedding_service.py  entity_registry.py  env_check.py  intent_map.py  lightx2v_blueprints.py  main.py  mcp_server.py  pipeline_orchestrator.py  pyproject.toml  regional_pipeline.py  requirements-dev.txt  requirements.txt  sage_attention.py  (+9 more)
infinite-canvas/agent/data/embeddings/: index.json
infinite-canvas/agent/templates/: sdxl-controlnet.json  sdxl-img2img.json  sdxl-inpaint.json  sdxl-lora.json  sdxl-txt2img.json  wan22-camera.json  wan22-first-last.json  wan22-fun-control.json  wan22-img2vid.json
infinite-canvas/agent/tests/: __init__.py  conftest.py
infinite-canvas/agent/tests/e2e/: test_pipeline.py
infinite-canvas/agent/tests/integration/: test_workflows.py
infinite-canvas/agent/tests/unit/: test_agent.py  test_consistency_manager.py  test_embedding.py  test_entity_registry.py  test_export_import.py  test_intent_map.py  test_lightx2v.py  test_pipeline_orchestrator.py  test_regional.py  test_storyboard.py  test_template_engine.py  (+3 more)
(+63 files in other folders)
