[project]
name = "infinite-canvas-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "websockets>=13,<15",
  "httpx>=0.28,<1.0",
  "pydantic>=2.9,<3.0",
  "ollama>=0.4,<1.0",
  "pyyaml>=6.0,<7.0",
  "pillow>=11.0,<12.0",
]
